products added header

--- a/pages/products.html
+++ b/pages/products.html
@@ -7,6 +7,61 @@
     <title>products</title>
 </head>
 <body>
-    
+     <!-- header -->
+     <header class="header">
+        <div class="container headaer__container">
+            <nav class="header__nav">
+                <a class="header__logo" href="index.html">
+                    <img src="/assets/images/articles/site-logo.png" alt="site logo">
+                </a>
+                <a class="header__logo2" href="index.html">
+                    <img src="/assets/images/articles/site-logo-res.png" alt="site-logo">
+                </a>
+                <ul class="header__list1">
+                    <li class="header__list1-item">
+                        <img src="/assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
+                        <a href="/pages/categories.html">
+                            Каталог
+                        </a>
+                    </li>
+                    <li class="header__list1-item2">
+                        <input type="search" placeholder="Найти товар" id="search">
+                        <label for="search">
+                            <img src="/assets/images/icons/search.svg" alt="search">
+                        </label>
+                    </li>
+                </ul>
+                <ul class="header__list2">
+                    <li class="header__list2-item">
+                        <a href="/pages/favorite.html">
+                            <img src="/assets/images/icons/favorites.svg" alt="favorites">
+                            Избранное
+                        </a>
+                    </li>
+                    <li class="header__list2-item">
+                        <a href="/pages/products.html">
+                            <img src="/assets/images/icons/products.svg" alt="products">
+                            продукты
+                        </a>
+                    </li>
+                    <li class="header__list2-item">
+                        <span>0</span>
+                        <a href="/pages/cart.html">
+                            <img src="/assets/images/icons/products-basket.svg" alt="products-basket">
+                            Корзина
+                        </a>
+                    </li>
+                    <li class="header__list2-item2">
+                        <a href="#">
+                            <img src="/assets/images/articles/avatar.png" alt="avatar">
+                            <span>Алексей</span>
+                        </a>
+                        <img class="header__list2-dropdown" src="/assets/images/icons/dropdown.svg" alt="dropdown">
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- /header -->
 </body>
 </html>
