home page yaxshilandi

--- a/index.html
+++ b/index.html
@@ -78,24 +78,15 @@
         <section class="discount">
             <div class="container">
                 <div class="discount__wrapper">
-                    <h3 class="discount__wrapper-title">Акции</h3>
-                    <a class="discount__wrapper-link" href="/pages/products.html">
+                    <h3 class="discount__wrapper__title">Акции</h3>
+                    <a class="discount__wrapper__link" href="/pages/products.html">
                         Все продукты
                         <img src="/assets/images/icons/right-arrow.svg" alt="right">
                     </a>
                 </div>
 
                 <div class="discount__rows">
-                    <!-- <div class="discount__card">
-                        <img class="discount__card-img" src="" alt="">
-                        <div>
-                            <p class="discount__card-discount">50 %</p>
-                            <p class="discount__card-name">apple</p>
-                        </div>
-                        <p class="discount__card-desc">asgd</p>
-                        <p class="discount__card-rate">5</p>
-                        <button class="discount__card-btn">В корзину</button>
-                    </div> -->
+                    
                 </div>
             </div>
         </section>
@@ -104,8 +95,8 @@
         <section class="new-products">
             <div class="container">
                 <div class="new-products__wrapper">
-                    <h3 class="new-products__wrapper-title">Новинки</h3>
-                    <a class="new-products__wrapper-link" href="/pages/products.html">
+                    <h3 class="new-products__wrapper__title">Новинки</h3>
+                    <a class="new-products__wrapper__link" href="/pages/products.html">
                         Все продукты
                         <img src="/assets/images/icons/right-arrow.svg" alt="right">
                     </a>
@@ -120,13 +111,23 @@
         <section class="purchased">
             <div class="container">
                 <div class="purchased__wrapper">
-                    <h3 class="purchased__wrapper-title">Покупали раньше</h3>
-                    <a class="purchased__wrapper-link" href="/pages/products.html">
+                    <h3 class="purchased__wrapper__title">Покупали раньше</h3>
+                    <a class="purchased__wrapper__link" href="/pages/products.html">
                         Все продукты
                         <img src="/assets/images/icons/right-arrow.svg" alt="right">
                     </a>
                 </div>
                 <div class="purchased__rows">
+
+                </div>
+            </div>
+        </section>
+
+        <!-- apps -->
+        <section class="apps">
+            <div class="container">
+                <h1 class="apps__title">Специальные предложения</h1>
+                <div class="apps__row">
 
                 </div>
             </div>
