--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
                 <ul class="header__list1">
                     <li class="header__list1-item">
-                        <img src="/assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
+                        <img class="header__menu" src="/assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
                         <a href="/pages/categories.html">
                             Каталог
                         </a>
@@ -64,6 +64,13 @@
             </nav>
         </div>
     </header>
+    <div class="category ">
+        <div class="container">
+            <ul class="category__list">
+                
+            </ul>
+        </div>
+    </div>
     <!-- /header -->
     <main>
         <!-- delivery -->
@@ -132,9 +139,48 @@
                 </div>
             </div>
         </section>
+
+        <!-- stores -->
+        <section class="stores">
+            <div class="container">
+                <h3 class="stores__title">Наши магазины</h3>
+                <div class="stores__btns">
+                    <button class="stores__btns__btn ">п.Щельяюр</button>
+                    <button class="stores__btns__btn">д.Вертеп</button>
+                    <button class="stores__btns__btn">с.Краснобор</button>
+                    <button class="stores__btns__btn">д.Диюр</button>
+                </div>
+                <div class="stores__maps">
+                    <iframe class="stores__maps__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5996.137248469285!2d69.19918846748926!3d41.28561091500271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8ba578f4f58d%3A0xd7a2ecf23413b7a0!2sNajot%20Ta&#39;lim%20Chilonzor%20Filial!5e0!3m2!1suz!2s!4v1707557876123!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <iframe class="stores__maps__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5004.588510766682!2d69.19918846748926!3d41.28561091500271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8ba578f4f58d%3A0xd7a2ecf23413b7a0!2sNajot%20Ta&#39;lim%20Chilonzor%20Filial!5e1!3m2!1suz!2s!4v1707558103790!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <iframe class="stores__maps__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.2541018261486!2d69.24264697520216!3d41.32508759985858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8bfaedfe3e1d%3A0x23ac4a5a705b84ab!2zTmFqb3QgVGHigJlsaW0!5e0!3m2!1suz!2s!4v1707558174691!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <iframe class="stores__maps__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2500.7797907168765!2d69.24264697520216!3d41.32508759985858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8bfaedfe3e1d%3A0x23ac4a5a705b84ab!2zTmFqb3QgVGHigJlsaW0!5e1!3m2!1suz!2s!4v1707558215131!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
+
+        <section class="articles">
+            <div class="container">
+                <div class="articles__wrapper">
+                    <h3 class="articles__title">Статьи</h3>
+                    <a class="articles__link" href="#">
+                        Все статьи
+                        <img src="/assets/images/icons/right-arrow.svg" alt="right">
+                    </a>
+                </div>
+
+                <div class="articles__row">
+                   
+                </div>
+            </div>
+        </section>
     </main>
     <script src="js/utils.js"></script>
     <script src="js/products-data.js"></script>
+    <script src="js/categories-data.js"></script>
     <script src="js/home.js"></script>
     <script src="js/main.js"></script>
 </body>
