added new faetures

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="header__list1-item2">
-                        <input type="search" placeholder="Найти товар" id="search">
+                        <input class="header__search" type="search" placeholder="Найти товар" id="search">
                         <label for="search">
                             <img src="/assets/images/icons/search.svg" alt="search">
                         </label>
@@ -64,6 +64,12 @@
             </nav>
         </div>
     </header>
+    <!-- search -->
+    <div class="search">
+        <div class="search__products">
+           
+        </div>
+    </div>
     <div class="category ">
         <div class="container">
             <ul class="category__list">
@@ -178,9 +184,12 @@
             </div>
         </section>
     </main>
+
+    
     <script src="js/utils.js"></script>
     <script src="js/products-data.js"></script>
     <script src="js/categories-data.js"></script>
+    <script src="js/const.js"></script>
     <script src="js/home.js"></script>
     <script src="js/main.js"></script>
 </body>
