--- a/pages/products.html
+++ b/pages/products.html
@@ -62,6 +62,11 @@
             </nav>
         </div>
     </header>
+    <div class="search">
+        <div class="search__products">
+           
+        </div>
+    </div>
     <div class="category ">
         <div class="container">
             <ul class="category__list">
