--- a/index.html
+++ b/index.html
@@ -186,11 +186,12 @@
     </main>
 
     
-    <script src="js/utils.js"></script>
     <script src="js/products-data.js"></script>
     <script src="js/categories-data.js"></script>
     <script src="js/const.js"></script>
-    <script src="js/home.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/products.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/utils.js"></script>
 </body>
 </html>
