--- a/pages/products.html
+++ b/pages/products.html
@@ -101,7 +101,8 @@
     <script src="/js/categories-data.js"></script>
     <script src="/js/products-data.js"></script>
     <script src="/js/const.js"></script>
-    <script src="/js/products.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/products.js"></script>
+    <script src="/js/cart.js"></script>
 </body>
 </html>
