--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container headaer__container">
             <nav class="header__nav">
-                <a class="header__logo" href="index.html">
+                <a class="header__logo" href="/index.html">
                     <img src="/assets/images/articles/site-logo.png" alt="site logo">
                 </a>
                 <a class="header__logo2" href="index.html">
@@ -78,11 +78,28 @@
     </div>
     <!-- /header -->
     <main>
-       
+       <section class="carts">
+        <div class="container">
+            <div class="carts__links">
+                <a class="carts__link" href="/index.html">
+                    Главная
+                </a>
+                <img src="/assets/images/icons/right-arrow.svg" alt="right arrow">
+                <a class="carts-link" href="/pages/cart.html">Все продукты</a>
+            </div>
+            <h1 class="carts__title">korzinka</h1>
+            <div class="cart-products">
+                <div class="container">
+                    <div class="cart-products__row">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+       </section>
     </main>
 
 
-    <script src="/js/utils.js"></script>
     <script src="/js/categories-data.js"></script>
     <script src="/js/products-data.js"></script>
     <script src="/js/const.js"></script>
