--- a/pages/products.html
+++ b/pages/products.html
@@ -11,10 +11,10 @@
     <header class="header">
         <div class="container headaer__container">
             <nav class="header__nav">
-                <a class="header__logo" href="index.html">
+                <a class="header__logo" href="/index.html">
                     <img src="/assets/images/articles/site-logo.png" alt="site logo">
                 </a>
-                <a class="header__logo2" href="index.html">
+                <a class="header__logo2" href="/index.html">
                     <img src="/assets/images/articles/site-logo-res.png" alt="site-logo">
                 </a>
                 <ul class="header__list1">
@@ -97,12 +97,11 @@
            </div>
         </section>
     </main>
-    <script src="/js/utils.js"></script>
+
     <script src="/js/categories-data.js"></script>
     <script src="/js/products-data.js"></script>
     <script src="/js/const.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/products.js"></script>
-    <script src="/js/cart.js"></script>
 </body>
 </html>
