--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/categories.min.css">
     <title>categories</title>
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <div class="container headaer__container">
+            <nav class="header__nav">
+                <a class="header__logo" href="/index.html">
+                    <img src="/assets/images/articles/site-logo.png" alt="site logo">
+                </a>
+                <a class="header__logo2" href="/index.html">
+                    <img src="/assets/images/articles/site-logo-res.png" alt="site-logo">
+                </a>
+                <ul class="header__list1">
+                    <li class="header__list1-item">
+                        <img class="header__menu" src="/assets/images/icons/hamburger-menu.svg" alt="hamburger-menu">
+                        <a href="/pages/categories.html">
+                            Каталог
+                        </a>
+                    </li>
+                    <li class="header__list1-item2">
+                        <input class="header__search" type="search" placeholder="Найти товар" id="search">
+                        <label for="search">
+                            <img src="/assets/images/icons/search.svg" alt="search">
+                        </label>
+                    </li>
+                </ul>
+                <ul class="header__list2">
+                    <li class="header__list2-item">
+                        <a href="/pages/favorite.html">
+                            <img src="/assets/images/icons/favorites.svg" alt="favorites">
+                            Избранное
+                        </a>
+                    </li>
+                    <li class="header__list2-item">
+                        <a href="/pages/products.html">
+                            <img src="/assets/images/icons/products.svg" alt="products">
+                            продукты
+                        </a>
+                    </li>
+                    <li class="header__list2-item">
+                        <span>0</span>
+                        <a href="/pages/cart.html">
+                            <img src="/assets/images/icons/products-basket.svg" alt="products-basket">
+                            Корзина
+                        </a>
+                    </li>
+                    <li class="header__list2-item2">
+                        <a href="#">
+                            <img src="/assets/images/articles/avatar.png" alt="avatar">
+                            <span>Алексей</span>
+                        </a>
+                        <img class="header__list2-dropdown" src="/assets/images/icons/dropdown.svg" alt="dropdown">
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- search -->
+    <div class="search">
+        <div class="search__products">
+
+        </div>
+    </div>
+    <div class="category ">
+        <div class="container">
+            <ul class="category__list">
+
+            </ul>
+        </div>
+    </div>
+    <!-- /header -->
+    <main>
+        <section class="catalog">
+            <div class="container">
+                <div class="catalog__links">
+                    <a class="catalog__link" href="/index.html">
+                        Главная
+                    </a>
+                    <img src="/assets/images/icons/right-arrow.svg" alt="right arrow">
+                    <a class="catalog-link" href="/pages/cart.html">Каталог</a>
+                </div>
+
+                <div class="catalog__row">
+                    
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script src="/js/categories-data.js"></script>
+    <script src="/js/const.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/categories.js"></script>
 </body>
+
 </html>
