--- a/pages/cart.html
+++ b/pages/cart.html
@@ -16,7 +16,7 @@
                 <a class="header__logo" href="/index.html">
                     <img src="/assets/images/articles/site-logo.png" alt="site logo">
                 </a>
-                <a class="header__logo2" href="index.html">
+                <a class="header__logo2" href="/index.html">
                     <img src="/assets/images/articles/site-logo-res.png" alt="site-logo">
                 </a>
                 <ul class="header__list1">
@@ -35,6 +35,7 @@
                 </ul>
                 <ul class="header__list2">
                     <li class="header__list2-item">
+                        <span class="favorite-cart-quantity">0</span>
                         <a href="/pages/favorite.html">
                             <img src="/assets/images/icons/favorites.svg" alt="favorites">
                             Избранное
@@ -47,7 +48,7 @@
                         </a>
                     </li>
                     <li class="header__list2-item">
-                        <span>0</span>
+                        <span class="cart-quantity">0</span>
                         <a href="/pages/cart.html">
                             <img src="/assets/images/icons/products-basket.svg" alt="products-basket">
                             Корзина
@@ -87,16 +88,29 @@
                 <img src="/assets/images/icons/right-arrow.svg" alt="right arrow">
                 <a class="carts-link" href="/pages/cart.html">Все продукты</a>
             </div>
-            <h1 class="carts__title">korzinka</h1>
+            <h1 class="carts__title">Корзина</h1>
             <div class="cart-products">
-                <div class="container">
+                <div class="container carts__container">
                     <div class="cart-products__row">
-                        
                     </div>
+                    <div class="cart-right"></div>
                 </div>
             </div>
         </div>
        </section>
+       <div class="modal">
+            <div class="modal__body">
+                <button class="modal__close">X</button>
+                <h1 class="modal__title">Вход</h1>
+                <label for="tel">Телефон</label>
+                <input type="tel">
+                <button class="modal__btn">Вход</button>
+                <div>
+                    <button class="modal__log-in">Регистрация</button>
+                    <button class="modal__forgot-password">Забыли пароль?</button>
+                </div>
+            </div>
+       </div>
     </main>
 
 
