--- a/pages/product.html
+++ b/pages/product.html
@@ -7,8 +7,8 @@
     <title>product</title>
 </head>
 <body>
-      <!-- header -->
-      <header class="header">
+    <!-- header -->
+    <header class="header">
         <div class="container headaer__container">
             <nav class="header__nav">
                 <a class="header__logo" href="/index.html">
@@ -33,6 +33,7 @@
                 </ul>
                 <ul class="header__list2">
                     <li class="header__list2-item">
+                        <span class="favorite-cart-quantity">0</span>
                         <a href="/pages/favorite.html">
                             <img src="/assets/images/icons/favorites.svg" alt="favorites">
                             Избранное
@@ -45,7 +46,7 @@
                         </a>
                     </li>
                     <li class="header__list2-item">
-                        <span>0</span>
+                        <span class="cart-quantity">0</span>
                         <a href="/pages/cart.html">
                             <img src="/assets/images/icons/products-basket.svg" alt="products-basket">
                             Корзина
@@ -96,7 +97,9 @@
                         <p>арт. 371431</p>
                         <p class="product__part__rating">5 <span>3 отзыва</span></p>
                         <p><img src="/assets/images/icons/share-icon.svg" alt="share">Поделиться</p>
-                        <a href="#"><img class="product__part__heart" src="/assets/images/icons/heart.svg" alt="heart">В избраное</a>
+                        <div class="product__part__inner">
+                           
+                        </div>
                     </div>
                     <div class="product__wrapper">
                         <div class="product__imgs">
@@ -132,6 +135,19 @@
                 </div>
             </div>
         </section>
+        <div class="modal">
+            <div class="modal__body">
+                <button class="modal__close">X</button>
+                <h1 class="modal__title">Вход</h1>
+                <label for="tel">Телефон</label>
+                <input type="tel">
+                <button class="modal__btn">Вход</button>
+                <div>
+                    <button class="modal__log-in">Регистрация</button>
+                    <button class="modal__forgot-password">Забыли пароль?</button>
+                </div>
+            </div>
+       </div>
     </main>
     <script src="/js/categories-data.js"></script>
     <script src="/js/products-data.js"></script>
